...
        <Text style={styles.title}>
          Få styr på din tid - og grin lidt undervejs
        </Text>

        <TouchableOpacity
          style={styles.button}
          testID='LoginButton'
          onPress={() => navigation.navigate('Login')}
        >
          <Text style={styles.buttonText}>Login</Text>
        </TouchableOpacity>

        <TouchableOpacity
...
