...

  return (
    <Background>
      <SafeAreaView style={[styles.container, { backgroundColor: currentColors.background }]}>
        {/* Header */}
        <View style={styles.headerContainer}>
          <Text style={[styles.title, { color: currentColors.text }]}>Din tid i dag</Text>

          <TouchableOpacity onPress={logout}>
            <Text style={[styles.logoutText, { color: '#4DAFFF' }]}>Log ud</Text>
          </TouchableOpacity>
        </View>

...
